Add background color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <section class="new-idea">
+    <section class="new-idea container">
       <form action="" class="new-idea-form">
         <input type="text" class="new-idea-title" placeholder="Title">
         <input type="text" class="new-idea-body" placeholder="Body">
