Add 'Clear All Ideas' button to the page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <input type="submit" class="new-idea-submit">
       </form>
     </section>
+    <section class="list-controls">
+      <button class="clear-ideas">Clear All Ideas</button>
+    </section>
     <section class="ideas"></section>
     <script
 			  src="https://code.jquery.com/jquery-3.1.0.min.js"
